<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/age_ancient"
        android:layout_marginBottom="20dp"
        android:textSize="11sp"
        android:text="@string/post_age_old"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:text="@string/post_content_preview"/>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9e9e9e"
            android:text="@string/author"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:gravity="right"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9e9e9e"
            android:text="@string/comments"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:gravity="right" />


        <TextView
            android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9e9e9e"
            android:text="@string/likes"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:gravity="right" />

    </LinearLayout>


</LinearLayout>